# imitator_vs_satisficer

./: README.md  pyproject.toml
pilot_experiment/: data_paths.py  save_results.py
pilot_experiment/analysis/: herarchy_bayes.py  v1.0.py
pilot_experiment/data/interim/: longer_data.csv  longer_data.parquet
pilot_experiment/data/processed/: longer_data.csv  longer_data.parquet
pilot_experiment/data/raw/: raw_data_1234.json  set_1026.json  set_1234.json  set_2162.json  set_2404.json  set_4784.json  set_5063.json  set_6728.json  set_7436.json  set_7486.json  set_8591.json
pilot_experiment/data/raw/questionnaire/: 2024_1121_1030 (1).json  2024_1121_1030 (10).json  2024_1121_1030 (11).json  2024_1121_1030 (2).json  2024_1121_1030 (3).json  2024_1121_1030 (4).json  2024_1121_1030 (5).json  2024_1121_1030 (6).json  2024_1121_1030 (7).json  2024_1121_1030 (8).json  2024_1121_1030 (9).json  2024_1121_1700 (1).json  2024_1121_1700 (2).json  2024_1121_1700 (3).json  2024_1121_1700 (4).json  2024_1121_1700 (5).json  2024_1121_1700 (6).json  2024_1121_1700 (7).json  2024_1122_1300 (1).json  2024_1122_1300 (10).json  2024_1122_1300 (11).json  2024_1122_1300 (12).json  2024_1122_1300 (13).json  2024_1122_1300 (14).json  2024_1122_1300 (15).json  2024_1122_1300 (16).json  2024_1122_1300 (17).json  2024_1122_1300 (18).json  2024_1122_1300 (2).json  2024_1122_1300 (4).json  (+78 more)
pilot_experiment/processing/: base.py  longer.py  longer_data.py
pilot_experiment/results/: hierarchy_bayes.txt  hierarichal_bayes.txt
pilot_experiment/simulation/: hierarchy_bayes.py
