[tool.poetry]
name = "imitator-vs-satisficer"
version = "0.1.0"
description = ""
authors = ["Ryu Takahashi <107231834+ryu-thakahashi@users.noreply.github.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pymc = "^5.19.1"
numpy = ">=1.21,<2.0"
icecream = "^2.1.3"
seaborn = "^0.13.2"
matplotlib = "^3.9.3"
graphviz = "^0.20.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
